# BuildModel3D

./: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.nh3290  Create3DBones.cxx  Create3DBones.h  Create3DBones.ui  DataMalla.cxx  DataMalla.h  README.md  arista.h  ayudaIMpresion  delaunay.cxx  delaunay.h  gestorperspectiva.cxx  gestorperspectiva.h  getsilueta  grafoAnt  helpProbeFilter.txt  interactorstyle.h  main.cxx  mouseinteractorstyle.h  perspecdata.cxx  perspecdata.h  punto.cpp  punto.h  simuladorxray.cxx  simuladorxray.h  subgrafo.cpp  subgrafo.h  utilitarios.cxx  utilitarios.h
AntiguoCode/HelpCode/: DelaunayPropio  ayudaAreaPickDelaunay  ayudaBackprojection  ayudaProyeccion  getSiluetaMejorado
AntiguoCode/OldClases/: ayudaSilhoutte  create3dbonesAnt  reproyeccion
DelaunayUtil/: arista.cpp  arista.h  grafo.cpp  grafo.h  punto.cpp  punto.h  subgrafo.cpp  subgrafo.h  utilmaths.cpp  utilmaths.h
